modified in index.html

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <p>Less is more work</p>
             <div class="about-content">
                 <div class="image">
-                    <img src="/images/ocean.jpg" alt="">
+                    <img src="images/ocean.jpg" alt="">
                 </div>
                 <div class="text">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum adipisci autem reprehenderit impedit architecto velit maiores saepe voluptatibus nobis temporibus aliquam ad provident dolor amet aperiam, illo quidem culpa! Eveniet.</p>
